syntax = "proto3";

option go_package = "./proto/user/;go_micro_service_user";

service User {
  // 注册
  rpc Register(UserRegisterReq) returns(UserRegisterRes) {}
  // 登录
  rpc Login(UserLoginReq) returns(UserLoginRes) {}
  // 查询用户信息
  rpc GetUserInfo(UserInfoReq) returns(UserInfoRes) {}
}

message UserRegisterReq {
  string user_name = 1;
  string first_name = 2;
  string pwd = 3;
}
message UserRegisterRes {
  string message = 1;
}

message UserLoginReq {
  string user_name = 1;
  string pwd = 2;
}
message UserLoginRes {
  bool is_success = 1;
}

message UserInfoReq {
  string user_name = 1;
}

message UserInfoRes {
  int64 user_id = 1;
  string user_name = 2;
  string first_name = 3;
}